[package]
name = "map-elites"
version = "0.1.0"
authors = ["Silvan Buedenbender <silvancodes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8", features = [ "small_rng" ] }
config = "0.9"
rayon = "1.3"
set_genome = { git = "https://github.com/SilvanCodes/set-genome", branch = "main" }
tracing = "0.1"

[dev-dependencies]
gym = { git = "https://github.com/SilvanCodes/gym-rs", tag = "thesis" }
favannat = { git = "https://github.com/SilvanCodes/favannat", tag = "thesis" }
tracing-subscriber = "0.2"
tracing-appender = "0.1"
serde_json = "1.0"
ndarray = { version = "0.13.0", features = ["serde"] }

